--- a/gb/21/6/26/n13049428.md
+++ b/gb/21/6/26/n13049428.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yqjdaq390/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yqjdaq390/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yqjdaq390/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yqjdaq390/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yqjdaq390/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yqjdaq390/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yqjdaq390/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yqjdaq390/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yqjdaq390/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yqjdaq390/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yqjdaq390/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yqjdaq390/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yqjdaq390/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yqjdaq390/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yqjdaq390/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yqjdaq390/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yqjdaq390/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yqjdaq390/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yqjdaq390/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yqjdaq390/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yqjdaq390/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yqjdaq390/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>协助撰写《资治通鉴》 范祖禹前世为东汉开国名将</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/05/id12924144-shutterstock_1533266789@1200x1200-600x400.jpeg" />
 <h6>范祖禹是《资治通鉴》的编撰者之一，负责唐史部分，并有着“唐鉴公”的美誉。(shutterstock)
 </h6>
 <hr>
-<p>熟悉中国历史的人对于被视为“此天地间必不可无之书，亦学者必不可不读之书”的《<ahref="https://github.com/yqjdaq390/djy/blob/master/gb/tag/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B4.md#1">资治通鉴</a>》应该是不陌生的，它是由北宋史学家司马光主编的一部多卷本编年体史书，共294卷，涵盖十六朝1362年的历史，而我们今天要说的主人公<ahref="https://github.com/yqjdaq390/djy/blob/master/gb/tag/%E8%8C%83%E7%A5%96%E7%A6%B9.md#1">范祖禹</a>亦是这部史书的编撰者之一，负责唐史部分，并有着“<ahref="https://github.com/yqjdaq390/djy/blob/master/gb/tag/%E5%94%90%E9%89%B4.md#1">唐鉴</a>公”的美誉。</p>
+<p>熟悉中国历史的人对于被视为“此天地间必不可无之书，亦学者必不可不读之书”的《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B4.md#1">资治通鉴</a>》应该是不陌生的，它是由北宋史学家司马光主编的一部多卷本编年体史书，共294卷，涵盖十六朝1362年的历史，而我们今天要说的主人公<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%8C%83%E7%A5%96%E7%A6%B9.md#1">范祖禹</a>亦是这部史书的编撰者之一，负责唐史部分，并有着“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%94%90%E9%89%B4.md#1">唐鉴</a>公”的美誉。</p>
 <h3><span style="color: #008000;">东汉开国名将转世</span></h3>
-<p><ahref="https://github.com/yqjdaq390/djy/blob/master/gb/tag/%E8%8C%83%E7%A5%96%E7%A6%B9.md#1">范祖禹</a>，仁宗康定二年（1041）出生于四川成都的名门望族。正史记载，在他出生前，他的母亲梦见一位穿着金甲的伟岸男子进入寝室，对她说：“我乃是汉朝将军<ahref="https://github.com/yqjdaq390/djy/blob/master/gb/tag/%E9%82%93%E7%A6%B9.md#1">邓禹</a>！”醒来后不久，孩子出生，其母认为孩子是邓禹转世，因此给他起名为“祖禹”，字“梦得”。他的另一个字“淳甫”，是后来因司马光写给他的帖而得来的。</p>
-<p>说到<ahref="https://github.com/yqjdaq390/djy/blob/master/gb/tag/%E9%82%93%E7%A6%B9.md#1">邓禹</a>，那也是历史上响当当的人物。他辅佐东汉开国皇帝刘秀建立政权，是开国头号功臣，名列云台二十八将之首。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%8C%83%E7%A5%96%E7%A6%B9.md#1">范祖禹</a>，仁宗康定二年（1041）出生于四川成都的名门望族。正史记载，在他出生前，他的母亲梦见一位穿着金甲的伟岸男子进入寝室，对她说：“我乃是汉朝将军<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%82%93%E7%A6%B9.md#1">邓禹</a>！”醒来后不久，孩子出生，其母认为孩子是邓禹转世，因此给他起名为“祖禹”，字“梦得”。他的另一个字“淳甫”，是后来因司马光写给他的帖而得来的。</p>
+<p>说到<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%82%93%E7%A6%B9.md#1">邓禹</a>，那也是历史上响当当的人物。他辅佐东汉开国皇帝刘秀建立政权，是开国头号功臣，名列云台二十八将之首。</p>
 <p>邓禹13岁时，在长安（今西安）从师学习，与刘秀相遇，善于相面的邓禹认为其非常人，与之交好。西汉末年天下大乱，邓禹投奔刘秀，为其出谋划策，让其延揽四方英雄，收服民心，建立伟业。他还知人善任，多次向刘秀举荐良将。</p>
 <p>邓禹有决胜奇谋，能以武威人，善于用兵，斩将破军，威声赫赫。在平定天下的过程中，邓禹每次取得胜利后，都严格约束军士，不得滥杀无辜、不得扰民，因此老百姓都扶老携幼欢迎邓禹军队，每日归顺者以千数计。而邓禹每到一个地方，也很亲民，老百姓常常挤在他的马车前诉说着感激之情。彼时邓禹名震关西，刘秀听说后非常高兴，几次写信称赞他。</p>
 <p>天下平定后，刘秀封邓禹为高密侯。邓禹又与贾复两人率先配合刘秀“偃干戈，修文德”的政策，一同削减军队，推行儒学，是在“退功臣而进文吏”的局面下，仍然能够参与讨论国家大事的三位列侯之一。</p>
@@ -18,16 +18,16 @@
 <p>这样一位道德高尚、立下功勋的东汉名将、名臣，转世为范祖禹，焉知不是在预示其不平凡的一生？</p>
 <figure id="attachment_11142005" aria-describedby="caption-attachment-11142005" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/03/DENG-YU-2.jpg"><img class="size-medium wp-image-11142005" src="https://i.epochtimes.com/assets/uploads/2019/03/DENG-YU-2-450x697.jpg" alt="" width="450" b="697" /></a><figcaption id="caption-attachment-11142005" class="wp-caption-text">邓禹辅佐东汉开国皇帝刘秀建立政权，是开国头号功臣，名列云台二十八将之首。（公有领域）</figcaption></figure>
 <h3><span style="color: #008000;">“天下之士” 获司马光盛赞</span></h3>
-<p>范祖禹13岁时，父母相继去世，祖禹由其叔祖、北宋名臣<ahref="https://github.com/yqjdaq390/djy/blob/master/gb/tag/%E8%8C%83%E9%95%87.md#1">范镇</a>抚育。范镇家教严正，视祖禹如同己出。然而，祖禹却因为父母早逝，内心孤寂。每当年节亲朋欢聚时，他都悄然躲开，选择闭门读书，不乐于与外界交往。不过，范镇十分看重他，曾对他人说：“此儿，天下士也。”他还对其他孩子说：“三郎是你们的榜样，你们应该向他学习。”祖禹是范百之的第三子，故称为三郎。</p>
-<p><ahref="https://github.com/yqjdaq390/djy/blob/master/gb/tag/%E8%8C%83%E9%95%87.md#1">范镇</a>和祖禹祖孙二人感情深厚，十分投契，祖禹一生治学、处世、为人都受到范镇的影响，而范镇亦将这个侄孙引为知己，包括后来哲宗即位，太皇太后高氏想升迁范镇为执政，范镇都写信询问祖禹的意见。祖禹认为不应接受，他就决定不再出山了。</p>
-<p>仁宗嘉祐年间，范祖禹中进士甲科。他到了京城后，结交的都是当时的名士，还得到了名臣司马光、王安石的赏识，司马光与范镇乃是知交。因为对祖禹的才华很欣赏，司马光便邀请他参与修撰《<ahref="https://github.com/yqjdaq390/djy/blob/master/gb/tag/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B4.md#1">资治通鉴</a>》中的唐代部分。在洛阳十五年间，他心无旁骛，不追求功名利禄，专心致志撰写《资治通鉴》。除了负责唐朝的初稿外，可以说是全书实际参与的第一号助手。</p>
+<p>范祖禹13岁时，父母相继去世，祖禹由其叔祖、北宋名臣<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%8C%83%E9%95%87.md#1">范镇</a>抚育。范镇家教严正，视祖禹如同己出。然而，祖禹却因为父母早逝，内心孤寂。每当年节亲朋欢聚时，他都悄然躲开，选择闭门读书，不乐于与外界交往。不过，范镇十分看重他，曾对他人说：“此儿，天下士也。”他还对其他孩子说：“三郎是你们的榜样，你们应该向他学习。”祖禹是范百之的第三子，故称为三郎。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%8C%83%E9%95%87.md#1">范镇</a>和祖禹祖孙二人感情深厚，十分投契，祖禹一生治学、处世、为人都受到范镇的影响，而范镇亦将这个侄孙引为知己，包括后来哲宗即位，太皇太后高氏想升迁范镇为执政，范镇都写信询问祖禹的意见。祖禹认为不应接受，他就决定不再出山了。</p>
+<p>仁宗嘉祐年间，范祖禹中进士甲科。他到了京城后，结交的都是当时的名士，还得到了名臣司马光、王安石的赏识，司马光与范镇乃是知交。因为对祖禹的才华很欣赏，司马光便邀请他参与修撰《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B4.md#1">资治通鉴</a>》中的唐代部分。在洛阳十五年间，他心无旁骛，不追求功名利禄，专心致志撰写《资治通鉴》。除了负责唐朝的初稿外，可以说是全书实际参与的第一号助手。</p>
 <p>司马光给予了他非常高的评价，说他“智识明敏，而性行温良，如不能言；好学能文，而谦晦不伐，如无所有；操守坚正，而圭角不露，如不胜衣，君子人也”。因为对祖禹信任有加，司马光的很多公文，皆出于其手，连“进《资治通鉴》表”也由祖禹代撰。</p>
 <p>《宋史》也说他“平居恂恂，口不言人过。至遇事，则别白是非，不少借隐”。大意是他有儒者之风，从不说他人的不是，做事情是非分明。</p>
 <figure id="attachment_11176322" aria-describedby="caption-attachment-11176322" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/04/Zi_zhi_tong_jian_by_sishmaguan.jpg"><img class="size-large wp-image-11176322" src="https://i.epochtimes.com/assets/uploads/2019/04/Zi_zhi_tong_jian_by_sishmaguan-600x282.jpg" alt="" width="600" b="282" /></a><figcaption id="caption-attachment-11176322" class="wp-caption-text">资治通鉴残稿一卷1，司马光手稿 33.8×130厘米，共29行，465字，记载东晋永昌元年（322）一年的史实。（公有领域）</figcaption></figure>
 <h3><span style="color: #008000;">经筵讲官第一</span></h3>
 <p>神宗驾崩后，年仅9岁的哲宗即位，太皇太后高氏临朝掌政，范祖禹被擢任右正言（注：官职名），司马光与吕公着也都由洛阳被召回，吕公着出任宰相。祖禹于是上奏说自己是吕公着的女婿，应当避嫌，遂辞职改任祠部员外郎，不久又辞职而任著作郎、修《神宗实录》，后迁任著作郎兼哲宗皇帝侍讲，同时在史馆与经筵中工作。</p>
 <p>在哲宗身边做侍讲时，范祖禹尽心尽责。每次在侍讲的前一晚，他必定端正衣冠，就像在御前一样；然后命令子弟侍坐，将内容先演讲一遍。讲时态度温和，引经据典，摘引时事，语调琅琅然，使听者兴起。因此苏轼曾说：“范淳甫讲说，是当今经筵讲官第一。言简而当，无一冗字、无一长语，义理明白而成文灿然，真得讲师三昧！”</p>
-<p>范祖禹在给小皇帝哲宗讲授的书籍中，《<ahref="https://github.com/yqjdaq390/djy/blob/master/gb/tag/%E5%94%90%E9%89%B4.md#1">唐鉴</a>》与《帝学》是他自己编撰的。前者是他在撰写《资治通鉴》唐朝部分后，觉得意犹未尽，遂将有唐一代历史，考得失、辨善恶，写成十二卷书，取名为《唐鉴》。因为这部书名气很大，“深明唐三百年治乱，学者尊之”，所以范祖禹被时人称为“唐鉴公”。宋高宗后来对讲臣说：“读《资治通鉴》知司马光有宰相度量，读《唐鉴》知范祖禹有台谏手段。”</p>
+<p>范祖禹在给小皇帝哲宗讲授的书籍中，《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%94%90%E9%89%B4.md#1">唐鉴</a>》与《帝学》是他自己编撰的。前者是他在撰写《资治通鉴》唐朝部分后，觉得意犹未尽，遂将有唐一代历史，考得失、辨善恶，写成十二卷书，取名为《唐鉴》。因为这部书名气很大，“深明唐三百年治乱，学者尊之”，所以范祖禹被时人称为“唐鉴公”。宋高宗后来对讲臣说：“读《资治通鉴》知司马光有宰相度量，读《唐鉴》知范祖禹有台谏手段。”</p>
 <p>《帝学》是范祖禹在做侍讲时，选取并整理了上自三皇五帝、下至宋神宗等帝王的故事编撰而成，取名《帝学》，一共八卷，供哲宗阅读。</p>
 <p>两部书的重点在解释政治盛衰，并把“复祖宗（指宋太祖、太宗以下各帝）之法”的精神及辨别人物奸邪、正直的意义阐述出来。此外，他还编撰了《仁皇政典》六卷，专门讲述仁宗时的政治，要求哲宗学习。</p>
 <figure id="attachment_11154079" aria-describedby="caption-attachment-11154079" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/04/20160221001140-15727.jpg"><img class="size-medium wp-image-11154079" src="https://i.epochtimes.com/assets/uploads/2019/04/20160221001140-15727-450x500.jpg" alt="苏轼入宫任翰林学士时，一夜高后与哲宗同御便殿，宣苏轼入见。高后追忆神宗知遇，苏轼不觉悲泣，高后、哲宗与众人亦皆感泣。图为《帝鉴图说》插图。（公有领域）" width="450" b="500" /></a><figcaption id="caption-attachment-11154079" class="wp-caption-text">在哲宗身边做侍讲时，范祖禹尽心尽责。示意图，图为《帝鉴图说》插图。（公有领域）</figcaption></figure>
@@ -51,46 +51,46 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/4/2/n12855029.md#1">精通西学的严复相信冥冥中有鬼神</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/2/6/n12737786.md#1">【元曲大家】江南才子徐再思 写尽相思意</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/1/23/n12707767.md#1">【元曲大家】张可久半生为吏 终成词林宗匠</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/1/10/n12678787.md#1">大书画家董其昌资助穷算命先生</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/20/12/21/n12636114.md#1">【元曲大家】关汉卿的散曲本色</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/20/12/17/n12627056.md#1">少年李白 心静飞鸟亲 道高猛虎伏</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/20/12/9/n12606703.md#1">王羲之入木三分与范仲淹断齑划粥</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/20/10/28/n12508782.md#1">王羲之不好名利 与道士许迈结世外之交</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/20/9/15/n12405979.md#1">左思十年写就《三都赋》 一时洛阳纸贵</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/10/22/n13322375.md#1">将巨额遗产让与姑母 阮孝绪避世向道</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/21/n13104808.md#1">欧阳修一生奇遇多 常怀疑自己本是世外之人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/16/n13093824.md#1">早慧神童“初唐四杰”为何有才名寡爵禄？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/4/2/n12855029.md#1">精通西学的严复相信冥冥中有鬼神</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/2/6/n12737786.md#1">【元曲大家】江南才子徐再思 写尽相思意</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/1/23/n12707767.md#1">【元曲大家】张可久半生为吏 终成词林宗匠</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/1/10/n12678787.md#1">大书画家董其昌资助穷算命先生</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/12/21/n12636114.md#1">【元曲大家】关汉卿的散曲本色</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/12/17/n12627056.md#1">少年李白 心静飞鸟亲 道高猛虎伏</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/4/n10023278.md#1" target="_blank">天下收藏第一人张伯驹的悲喜人生（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/8/n9014844.md#1" target="_blank">【细语人生】见证大法的神奇（4）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/28/n11616929.md#1" target="_blank">颜智华：中国特大饥荒60周年祭（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/14/n9839741.md#1" target="_blank">【细语人生】见证大法的神奇（8）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/14/n13020876.md#1">【命理】功名有无 寿命长短 都是上天给的</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13046979.md#1">前苏联海军总司令：帽状UFO从海中飞出</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/13/n13019873.md#1">【忽必烈传】南宋气数尽 蒙元攻下襄樊</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/18/n13031032.md#1">神机妙算的孔明 面临成败生死如何看天意？</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/26/n13048557.md#1">【方菲访谈】专访李有甫：从三星堆看史前文化</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/26/n13049869.md#1">【横河观点】百年“喜”事丧办 中共身份危机</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/11/n13015910.md#1">【思想领袖】图尔克：中共种族灭绝必须制止</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/26/n13049310.md#1">【财商天下】逆天生物实验 中共奔向终极目的？</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/24/n13044859.md#1">【更新】佛州12层大楼倒塌 159人下落不明</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/26/n13049438.md#1">中美军力对比 差距到底多大（三）</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/24/n13045496.md#1">【独家】郑州公安：死囚如何被强摘器官</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13048292.md#1">关晓彤路透照被指像大爷遛弯 小演员帮澄清</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13048070.md#1">蔡少芬一手抱娃一手做饭 站姿霸气也逗趣</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13048432.md#1">邓超不被女儿接受讲故事 缘于孙俪一搞笑爆料</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/27/n13050645.md#1">Delta病毒侵台 贾永婕急送PAPR等器材至屏东</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/27/n13050438.md#1">金圣圭17天前才打完疫苗 无症状确诊染疫</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13048027.md#1">牙周病是吃出来的？3类食物可能是元凶</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13046979.md#1">前苏联海军总司令：帽状UFO从海中飞出</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/24/n13043453.md#1">打疫苗不想出现严重副作用？施打后注意四件事</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13046730.md#1">冷气温度这样调最省电！6招吹冷气不用怕花钱</a></li>
-<li><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/27/n13050609.md#1">幸运成为航班上唯一乘客 印男：我像君王</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yqjdaq390/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yqjdaq390/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/26/n13049428.htm">协助撰写《资治通鉴》 范祖禹前世为东汉开国名将</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/26/n13049428.htm">协助撰写《资治通鉴》 范祖禹前世为东汉开国名将</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yqjdaq390/djy/blob/master/gb/21/6/26/n13049428.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yqjdaq390/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yqjdaq390/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yqjdaq390/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yqjdaq390/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/6/26/n13049428.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
